--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -49,3 +49,13 @@
     position: absolute;
 }
 
+/* Bluring section */
+.s-blur2{
+    left:14rem;
+    top: 8rem;
+}
+
+.s-blur1{
+    top: 13rem;
+    left: -18rem;
+}
