--- a/src/Components/Circle/Circle.css
+++ b/src/Components/Circle/Circle.css
@@ -31,6 +31,19 @@
     box-shadow: var(--boxShadow);
     }
 
+.circle::after{
+    border-radius: 100%;
+    content: '';
+    background-image: linear-gradient(to bottom , #d1d13c 0%, #87e6fb);
+    top: -8px;
+    left: -8px;
+    bottom: -8px;
+    right: -8px;
+    position: absolute;
+    z-index: -1;
+    box-shadow: var(--boxShadow);
+}
+
     .achievement span:nth-of-type(2)
     {
         color: var(--orange);
