Updating Page Responsiveness final version

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -45,3 +45,13 @@ textarea{
         left: 8rem;
         top: 1rem;
 }
+
+@media screen and (max-width:480px){
+    .contact{
+        flex-direction: column;
+        transform: scale(0.8);
+        align-items: left;
+        justify-content: start!important;
+    }
+
+}
