--- a/src/Components/Testimonial/Testimonial.css
+++ b/src/Components/Testimonial/Testimonial.css
@@ -74,3 +74,13 @@
 .t-wrapper .swiper-pagination-bullet-active{
     background: var(--orange);
 }
+
+@media screen and (max-width:480px){
+.t-wrapper{
+    padding: 0;
+}
+.testimonial>img{
+    width: 70px;
+    height: 70px;
+}
+}
