--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -46,6 +46,12 @@ textarea{
         top: 1rem;
 }
 
+.s-button:hover{
+    background: white;
+    color: black;
+}
+
+
 @media screen and (max-width:480px){
     .contact{
         display: flex;
