--- a/src/Components/Work/Work.css
+++ b/src/Components/Work/Work.css
@@ -63,8 +63,10 @@
     background: white;
 }
 
-.w-secCircle > img{
-    transform: scale(0.5);
+.w-images{
+    /* transform: scale(0.5); */
+    height: 80px;
+    width: 80px;
 }
 
 
