--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -1,4 +1,4 @@
-.portfolio{
+.portfolio {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,39 +6,40 @@
     height: 70vh;
 }
 
-.portfolio span:nth-last-of-type(1){
+.portfolio span:nth-last-of-type(1) {
     color: var(--black);
     font-size: 2rem;
     font-weight: bold;
 }
 
 
-.portfolio span:nth-of-type(2){
+.portfolio span:nth-of-type(2) {
     color: var(--orange);
     font-size: 2.5rem;
     font-weight: bold;
 }
+
 /* Slidess */
 
-.portfolio .swiper{
-    overflow: visible!important;
+.portfolio .swiper {
+    overflow: visible !important;
 
 }
 
-.portfolio-slider{
+.portfolio-slider {
     margin-top: 3rem;
     width: 100%;
 }
 
-.portfolio-slider .swipe-slider{
+.portfolio-slider .swipe-slider {
     width: 20rem;
     margin: auto;
 
 }
 
-.portfolio img{
+.portfolio img {
     width: 19rem;
-    filter: drop-shadow(-12px 15px 13px rgba(0,0,0,0.25));
+    filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
     border-radius: 19px;
+    height: 12rem;
 }
-
