--- a/src/Components/Testimonial/Testimonial.css
+++ b/src/Components/Testimonial/Testimonial.css
@@ -1,4 +1,4 @@
-.t-wrapper{
+.t-wrapper {
     padding: 0 3rem 0 3rem;
     height: 100vh;
     display: flex;
@@ -10,31 +10,32 @@
     position: relative;
 }
 
-.t-heading{
-    align-self: start;
+.t-heading {
+    align-self: center;
 }
 
-.t-heading>*{
+.t-heading>* {
     font-size: 2rem;
     font-weight: bold;
 }
 
-.t-heading span:nth-last-of-type(2){
+.t-heading span:nth-last-of-type(2) {
     color: var(--orange);
-
+    padding-left: 10px;
+    padding: 10px;
 }
 
-.t-blur1{
+.t-blur1 {
     left: 38rem;
     top: 16rem;
 }
 
-.t-blur2{
+.t-blur2 {
     left: 0rem;
     top: 9rem;
 }
 
-.testimonial{
+.testimonial {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,45 +43,46 @@
     padding: 2rem;
     width: 30rem;
     height: 12rem;
-    background: rgba(255 , 255,255,0.26);
+    background: rgba(255, 255, 255, 0.26);
     border: 7px solid var(--blueCard);
     box-shadow: car(--boxShadow);
     border-radius: 20px;
 
 }
 
-.testimonial>img{
+.testimonial>img {
     width: 6rem;
     height: 6rem;
     border-radius: 100%;
 }
 
-.testimonial>span{
+.testimonial>span {
     color: var(gray);
 }
 
-.t-wrapper .swiper{
+.t-wrapper .swiper {
     width: 100%;
     height: 70%;
 }
 
-.t-wrapper .swiper-slide{
+.t-wrapper .swiper-slide {
     display: flex;
     align-items: center;
     justify-content: center;
 
 }
 
-.t-wrapper .swiper-pagination-bullet-active{
+.t-wrapper .swiper-pagination-bullet-active {
     background: var(--orange);
 }
 
-@media screen and (max-width:480px){
-.t-wrapper{
-    padding: 0;
-}
-.testimonial>img{
-    width: 70px;
-    height: 70px;
-}
+@media screen and (max-width:480px) {
+    .t-wrapper {
+        padding: 0;
+    }
+
+    .testimonial>img {
+        width: 70px;
+        height: 70px;
+    }
 }
