--- a/src/Components/Work/Work.css
+++ b/src/Components/Work/Work.css
@@ -1,17 +1,23 @@
-.works{
+.works {
     padding: 0 3rem 0 3rem;
     display: flex;
     height: 90vh;
     margin-top: 4rem;
 }
 
-.w-right{
+.Description {
+    font-size: 30 !important;
+
+}
+
+
+.w-right {
     position: relative;
 }
 
-.w-mainCircle{
+.w-mainCircle {
     left: 9rem;
-    position:relative;
+    position: relative;
     width: 18rem;
     height: 18rem;
     border-radius: 100%;
@@ -20,36 +26,36 @@
     top: 3rem;
 }
 
-.w-mainCircle>*{
+.w-mainCircle>* {
     position: absolute;
 }
 
-.w-mainCircle >  :nth-child(1){
+.w-mainCircle> :nth-child(1) {
     top: -3rem;
     left: 6rem;
 }
 
-.w-mainCircle >:nth-child(2){
+.w-mainCircle>:nth-child(2) {
     left: -3rem;
     top: 5rem;
 }
 
-.w-mainCircle>:nth-child(3){
+.w-mainCircle>:nth-child(3) {
     left: 6rem;
     top: 5rem;
 }
 
-.w-mainCircle>:nth-child(4){
+.w-mainCircle>:nth-child(4) {
     left: 15rem;
     top: 5rem;
 }
 
-.w-mainCircle>:nth-child(5){
+.w-mainCircle>:nth-child(5) {
     left: 6rem;
     top: 13rem;
 }
 
-.w-secCircle{
+.w-secCircle {
     width: 6rem;
     height: 6rem;
     position: absolute;
@@ -63,14 +69,14 @@
     background: white;
 }
 
-.w-images{
+.w-images {
     /* transform: scale(0.5); */
     height: 80px;
     width: 80px;
 }
 
 
-.w-backCircle{
+.w-backCircle {
     position: absolute;
     height: 13rem;
     width: 13rem;
@@ -78,62 +84,69 @@
     z-index: -1;
 }
 
-.blueCircle{
+.blueCircle {
     background: #1949B8;
     left: 18rem;
     top: 0rem;
 }
 
-.yellowCircle{
+.yellowCircle {
     background: #F5C32c;
-    left:  18rem;
+    left: 18rem;
     top: 10rem;
 }
 
-.greenCircle{
+.greenCircle {
     background-color: rgb(40, 211, 109);
     left: 5rem;
     top: 0rem;
 }
 
-.blackCircle{
+.blackCircle {
     background: rgb(32, 30, 30);
     top: 11rem;
     left: 5rem;
 }
 
-@media screen and (max-width:480px){
-    .works{
+@media screen and (max-width:480px) {
+    .works {
         flex-direction: column;
         height: 55rem;
         padding: 0;
         gap: 5rem;
     }
-    .w-right{
+
+    .w-right {
         display: flex;
         align-items: center;
         justify-content: start;
         transform: scale(0.7);
     }
-    .w-mainCircle{
+
+    .w-mainCircle {
         position: static;
     }
-    .w-backCircle{
-        left: 8rem!important;
+
+    .w-backCircle {
+        left: 8rem !important;
         /* top: 20px; */
     }
-    .blueCircle{
+
+    .blueCircle {
         top: -1rem;
     }
-    .yellowCircle{
+
+    .yellowCircle {
         top: 7rem;
     }
-    .blackCircle{
-        left: -2rem!important;
+
+    .blackCircle {
+        left: -2rem !important;
         top: 7rem;
     }
-    .greenCircle{
-        left: -2rem!important;
+
+    .greenCircle {
+        left: -2rem !important;
         top: -2rem;
     }
 
