--- a/src/Components/Work/Work.css
+++ b/src/Components/Work/Work.css
@@ -71,8 +71,9 @@
 
 .w-images {
     /* transform: scale(0.5); */
-    height: 80px;
-    width: 80px;
+    height: 100%;
+    width: 100%;
+    border-radius: 40%;
 }
 
 
